[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/ModMaker/ModMaker.gd" type="Script" id=1]

[node name="ModMaker" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 638.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FilterLine" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
margin_right = 638.0
margin_bottom = 24.0
placeholder_text = "Filter files"

[node name="Tree" type="Tree" parent="HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 638.0
margin_bottom = 696.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 700.0
margin_right = 638.0
margin_bottom = 720.0

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 58.0
margin_bottom = 20.0
text = "Update"

[node name="AddFilesButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 62.0
margin_right = 192.0
margin_bottom = 20.0
text = "Add files into mod"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="HBoxContainer/VBoxContainer2"]
margin_right = 638.0
margin_bottom = 696.0
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 700.0
margin_right = 638.0
margin_bottom = 720.0

[node name="RemoveFilesButton" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 95.0
margin_bottom = 20.0
text = "Remove files"

[node name="MakeModButton" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 99.0
margin_right = 178.0
margin_bottom = 20.0
text = "Make mod"

[connection signal="text_entered" from="HBoxContainer/VBoxContainer/FilterLine" to="." method="_on_FilterLine_text_entered"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/Tree" to="." method="_on_Tree_item_selected"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/AddFilesButton" to="." method="_on_AddFilesButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer/RemoveFilesButton" to="." method="_on_RemoveFilesButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer/MakeModButton" to="." method="_on_MakeModButton_pressed"]
